tenzir/tests/exec/operators/from_file/does_not_exist.tql
// error: true

from_file env("INPUTS") + "/from_file/does_not_exist.json", path_field=path
sort path
